--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,12 @@ name: ci
 
 on: 
   workflow_dispatch:
-  push:
+  pull_request:
     tags-ignore:
       - '**'
     paths-ignore:
       - ".github/**" 
-      - "README.md"
+      - "**.md"
       - ".gitignore"      
     branches:
       - main
@@ -39,3 +39,4 @@ jobs:
       
       - name: Run unit-test for all modules
         run: make test
+
