--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,6 @@ on:
     tags-ignore:
       - '**'
     paths-ignore:
-      - ".github/**" 
       - "**.md"
       - ".gitignore"      
     branches:
@@ -20,23 +19,19 @@ jobs:
 
     steps:
 
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           submodules: recursive
           fetch-depth: 0
 
-      - name: Build config
-        run: make build-config
-
-      - name: Build libraries
-        run: make build-release
-
-      - name: Build command line interface
-        run: make build-cli   
-
-      - name: Check Java code style
+      - name: Check code style
         run: make checkstyle
-      
-      - name: Run unit-test for all modules
-        run: make test
 
+      - name: Check codenarc code style
+        run: make codenarc
+
+      - name: Run unit-test
+        run: make test   
+
+      - name: Build test plugin
+        run: make release
