--- a/gradle.properties
+++ b/gradle.properties
@@ -1,24 +1,24 @@
 # Project-wide Gradle settings.
-GROUP=com.mapbox.mapboxsdk
+GROUP=org.maplibre.gl
 
-POM_URL=https://github.com/mapbox/android-sdk-versions-plugin
-POM_SCM_URL=https://github.com/mapbox/android-sdk-versions-plugin
-POM_SCM_CONNECTION=scm:git@github.com:mapbox/android-sdk-versions-plugin.git
+POM_URL=https://github.com/maplibre/android-sdk-versions-plugin
+POM_SCM_URL=https://github.com/maplibre/android-sdk-versions-plugin
+POM_SCM_CONNECTION=scm:git@github.com:maplibre/android-sdk-versions-plugin.git
 
-POM_SCM_DEV_CONNECTION=scm:git@github.com:mapbox/android-sdk-versions-plugin.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:maplibre/android-sdk-versions-plugin.git
 
 POM_LICENCE_NAME=The MIT License
 POM_LICENCE_URL=https://opensource.org/licenses/MIT
 POM_LICENCE_DIST=repo
 
-POM_DEVELOPER_ID=mapbox
-POM_DEVELOPER_NAME=Mapbox
+POM_DEVELOPER_ID=maplibre
+POM_DEVELOPER_NAME=MapLibre
 
 VERSION_NAME=1.1.1-SNAPSHOT
-POM_ARTIFACT_ID=mapbox-android-sdk-versions
-POM_NAME=Mapbox Android SDK Versions
-POM_ARTIFACT_TITLE=Mapbox Android SDK Version Plugin
-POM_DESCRIPTION=Mapbox Android SDK Version persistor
+POM_ARTIFACT_ID=maplibre-android-sdk-versions
+POM_NAME=MapLibre Android SDK Versions
+POM_ARTIFACT_TITLE=MapLibre Android SDK Version Plugin
+POM_DESCRIPTION=MapLibre Android SDK Version persistor
 POM_PACKAGING=jar
 
 SDK_REGISTRY_NAME=android-sdk-versions-plugin
