--- a/gradle/mvn-push-plugin.gradle
+++ b/gradle/mvn-push-plugin.gradle
@@ -120,7 +120,7 @@ afterEvaluate { project ->
     }
 
     signing {
-        required { isReleaseBuild() && gradle.taskGraph.hasTask("publish") }
+        // required { isReleaseBuild() && gradle.taskGraph.hasTask("publish") }
         sign publishing.publications.mavenJava
     }
 
